--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,66 +1,6 @@
 {
-  "root": true,
-  "env": {
-    "browser": true,
-    "node": true,
-    "es6": true
-  },
-  "plugins": ["@typescript-eslint", "simple-import-sort"],
-  "extends": [
-    "next/core-web-vitals",
-    "plugin:@typescript-eslint/recommended",
-    "prettier",
-    "plugin:prettier/recommended",
-    "plugin:react-hooks/recommended"
-  ],
+  "extends": "next/core-web-vitals",
   "rules": {
-    "@typescript-eslint/no-unused-vars": "error",
-    "@typescript-eslint/no-explicit-any": "off",
-    "react/react-in-jsx-scope": "off",
-    "react-hooks/rules-of-hooks": "error",
-    "react-hooks/exhaustive-deps": "off",
-    "no-nested-ternary": "off",
-    "no-console": "off",
-    "max-depth": "error",
-    "eqeqeq": "error",
-    "@next/next/no-html-link-for-pages": "error",
-    "@next/next/no-img-element": "error",
-    "simple-import-sort/imports": "error",
-    "simple-import-sort/exports": "error"
-  },
-
-  "overrides": [
-    // override "simple-import-sort" config
-    {
-      "files": ["*.js", "*.jsx", "*.ts", "*.tsx"],
-      "rules": {
-        "simple-import-sort/imports": [
-          "error",
-          {
-            "groups": [
-              [
-                // Packages `react`, `next` related packages come first.
-                "^react",
-                "^next",
-                "^@?\\w",
-                // Internal packages.
-                "^(@|components)(/.*|$)",
-                // Side effect imports.
-                "^\\u0000",
-                // Parent imports. Put `..` last.
-                "^\\.\\.(?!/?$)",
-                "^\\.\\./?$",
-                // Other relative imports. Put same-folder imports and `.` last.
-                "^\\./(?=.*/)(?!/?$)",
-                "^\\.(?!/?$)",
-                "^\\./?$",
-                // Style imports.
-                "^.+\\.?(css)$"
-              ]
-            ]
-          }
-        ]
-      }
-    }
-  ]
+    "react/no-unescaped-entities": 0
+  }
 }
