--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@react-email/tailwind": "^0.0.13",
     "@react-email/components": "0.0.14",
     "@react-email/render": "0.0.12",
+    "@react-email/tailwind": "^0.0.13",
+    "@tsparticles/engine": "^3.3.0",
+    "@tsparticles/react": "^3.0.0",
     "@types/node": "20.10.5",
     "@types/react": "18.2.46",
     "@types/react-dom": "18.2.18",
@@ -23,14 +25,16 @@
     "next": "^14.0.4",
     "postcss": "8.4.32",
     "react": "^18.2.0",
+    "react-animated-cursor": "^2.11.2",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
     "react-intersection-observer": "^9.5.3",
     "react-vertical-timeline-component": "^3.6.0",
-    "tailwindcss": "3.4.0",
-    "typescript": "5.3.3",
     "resend": "^0.16.0",
+    "tailwindcss": "3.4.0",
+    "tsparticles": "^3.3.0",
+    "typescript": "5.3.3",
     "typewriter-effect": "^2.20.1"
   },
   "devDependencies": {
