--- a/.github/workflow/release.yml
+++ b/.github/workflow/release.yml
@@ -5,7 +5,7 @@ env:
 on:
   push:
     tags:
-      - '*' # Push events to every tag not containing /
+      - '*'
 jobs:
   deploy-production:
     environment: production
@@ -15,7 +15,7 @@ jobs:
         with:
           submodules: 'true'
       - name: Install Vercel CLI
-        run: npm install --global vercel@latest
+        run: yarn install --global vercel@latest
       - name: Pull Vercel Environment Information
         run: vercel pull --yes --environment=production --token=${{ secrets.VERCEL_TOKEN }}
       - name: Build Project Artifacts
