--- a/.github/workflow/review.yml
+++ b/.github/workflow/review.yml
@@ -17,7 +17,7 @@ jobs:
         with:
           submodules: 'true'
       - name: Install Vercel CLI
-        run: npm install --global vercel@latest
+        run: yarn install --global vercel@latest
       - name: Pull Vercel Environment Information
         run: vercel pull --yes --environment=preview --token=${{ secrets.VERCEL_TOKEN }}
       - name: Build Project Artifacts
