--- a/.github/workflows/developer.yml
+++ b/.github/workflows/developer.yml
@@ -32,7 +32,7 @@ jobs:
       - name: 📦 Build project
         run: yarn run build
 
-  deploy-preview:
+  deploy-dev:
     runs-on: ubuntu-latest
     needs: [build]
     steps:
