--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -34,7 +34,7 @@ jobs:
       - name: 📦 Build project
         run: yarn run build
 
-  deploy-dev:
+  deploy-preview:
     runs-on: ubuntu-latest
     needs: [build]
     steps:
@@ -44,7 +44,7 @@ jobs:
           submodules: 'true'
 
       - name: 🏗 Install Vercel CLI
-        run: yarn install --global vercel@latest
+        run: npm install --global vercel@latest
 
       - name: 🏗 Pull preview vercel environment
         run: vercel pull --yes --environment=preview --token=${{ secrets.VERCEL_TOKEN }}
