--- a/.github/workflows/developer.yml
+++ b/.github/workflows/developer.yml
@@ -6,6 +6,9 @@ env:
 on:
   push:
     branches: [main]
+  pull_request:
+    branches: [main]
+    types: [closed]
 
 jobs:
   build:
@@ -43,10 +46,31 @@ jobs:
         run: npm install --global vercel@latest
 
       - name: 🏗 Pull preview vercel environment
-        run: vercel pull --yes --environment=development --token=${{ secrets.VERCEL_TOKEN }}
+        run: vercel pull --yes --environment=preview --token=${{ secrets.VERCEL_TOKEN }}
 
       - name: 📦 Build app artifacts
         run: vercel build --token=${{ secrets.VERCEL_TOKEN }}
 
       - name: 📦 Deploy app artifacts to vercel in preview
         run: vercel deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }}
+
+  tag-release:
+    runs-on: ubuntu-latest
+    needs: [deploy-dev]
+    steps:
+      - name: Checkout
+        if: github.event.pull_request.merged == true
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Extract version
+        if: github.event.pull_request.merged == true
+        id: version
+        run: |
+          NEW_VERSION=$(node -p 'require("./package.json").version')
+          echo "version=v$NEW_VERSION" >> $GITHUB_OUTPUT
+
+      - name: Create a git tag
+        if: github.event.pull_request.merged == true
+        run: git tag ${{ steps.version.outputs.version }} && git push --tags
