--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,33 +13,41 @@ jobs:
       matrix:
         node-version: [18.x]
     steps:
-      - name: check out repository code
+      - name: 🏗 Setup repo
         uses: actions/checkout@v4
-      - name: Set up Node.js ${{ matrix.node-version }}
+
+      - name: 🏗 Setup node ${{ matrix.node-version }}
         uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'yarn'
-      - name: install modules
+
+      - name: 🏗 Install dependencies
         run: yarn install
-      - name: lint project
+
+      - name: 📦 Lint with eslint
         run: yarn run lint
-      - name: build project
+
+      - name: 📦 Build project
         run: yarn run build
 
   deploy-production:
-    environment: production
     needs: [build]
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - name: 🏗 Setup repo
+        uses: actions/checkout@v4
         with:
           submodules: 'true'
-      - name: Install Vercel CLI
+
+      - name: 🏗 Install Vercel CLI
         run: npm install --global vercel@latest
-      - name: Pull Vercel Environment Information
+
+      - name: 🏗 Pull production vercel environment
         run: vercel pull --yes --environment=production --token=${{ secrets.VERCEL_TOKEN }}
-      - name: Build Project Artifacts
+
+      - name: 📦 Build app artifacts
         run: vercel build --prod --token=${{ secrets.VERCEL_TOKEN }}
-      - name: Deploy Project Artifacts to Vercel
+
+      - name: 📦 Deploy app artifacts to vercel in prod
         run: vercel deploy --prebuilt --prod --token=${{ secrets.VERCEL_TOKEN }}
